# quasar-svm

./: .gitignore  Cargo.toml  Makefile  README.md  biome.json  package.json  tsconfig.typecheck.json  tsdown.config.mts  vitest.config.ts
bindings/node/src/: base.ts  ffi.ts
bindings/node/src/kit/: README.md  index.ts  wire.ts
bindings/node/src/web3.js/: README.md  index.ts  result.ts  wire.ts
examples/typescript/: kit-full-example.ts  kit-quick-start.ts  root-kit.ts  root-web3.ts  web3-full-example.ts  web3-quick-start.ts
ffi/src/: ffi.rs  wire.rs
include/: quasar_svm.h
scripts/: sync-readme-examples.ts
svm/: Cargo.toml
svm/src/: lib.rs  program_cache.rs  svm.rs  sysvars.rs  token.rs
svm/tests/: ata_inner_instructions.rs  execution_trace.rs  inner_instructions.rs
tests/: .gitkeep  ESCROW_TESTS.md  README.md  kit.test.ts  readme-examples.test.ts  state.test.ts  tsconfig.json  web3-wire.test.ts
tests/clients/golang/escrow/: client.go  go.mod
tests/clients/typescript/: kit.ts
tests/helpers/: readmeExamples.ts
tests/python/: README.md  pyproject.toml  pytest.ini
tests/python/tests/: __init__.py  conftest.py  test_basic.py  test_token.py
tests/rust/: Cargo.toml  README.md
tests/rust/client/: Cargo.toml
tests/rust/client/src/: lib.rs
tests/rust/src/: lib.rs
tests/typescript/: README.md  package.json  tsconfig.json  vitest.config.ts
tests/typescript/kit/: basic.test.ts  escrow.test.ts  token.test.ts
tests/typescript/quasar_escrow/: package.json  web3.ts
tests/typescript/web3.js/: basic.test.ts  escrow.test.ts  token.test.ts
(+2 files in other folders)
