[package]
name = "quasar-svm-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Local quasar-svm dependency
quasar-svm = { path = "../../svm" }

# Escrow client
escrow-client = { path = "client" }

# Solana types
solana-address = "2.4"
solana-account = "4.1.0"
solana-pubkey = "4.1.0"
solana-instruction = "3.0"
solana-program-error = "3.0"
solana-program-pack = "3.1"
spl-token = { version = "9.0.0", default-features = false, features = ["no-entrypoint"] }

[dev-dependencies]
# No additional dev dependencies needed - using built-in test framework
